# transducers

./: LICENSE  README.md  stack.yaml  trancducers.cabal  transducers.cabal
src/Data/: Transducers.hs
src/Data/Transducers/: RichTransducer.hs  Transducer.hs
test/Data/Transducers/: TransducersSpec.hs
