name:                trancducers
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            http://github.com/phipsgabler/trancducers#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Gabler
maintainer:          example@example.com
copyright:           2015 Philipp Gabler
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Transducers
  build-depends:       base >= 4.7 && < 5
                     , categories
                     , profunctors
  default-language:    Haskell2010

test-suite trancducers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trancducers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/phipsgabler/trancducers
